# sitebender

./: .editorconfig  .env.authentik  .env.authentik.example  .env.oauth2-fuseki  .env.oauth2-grafana  .env.oauth2-grafana.example  .env.oauth2-minio  .env.oauth2-prometheus  .env.oauth2-thanos  .gitattributes  .gitignore  .mcp.json  .prettierrc.mjs  .watchmanconfig  AI_BRIEFING.md  AI_BRIEFING_BACKUP.md  AI_PLANNING.md  AI_STATUS.md  ARBORIST_DAY2_HANDOFF.md  ARBORIST_MCP_AUDIT_PROMPT.md  ARCHITECT_LIBRARY_EXPLORATION_REPORT.md  AUTH.md  BATCH_7_CHECKLIST.md  BATCH_7_FILE_STRUCTURE.md  BATCH_7_INDEX.md  BATCH_7_QUICK_REFERENCE.md  BATCH_7_RESEARCH.md  BATCH_7_RESEARCH_SUMMARY.txt  BRAINSTORMING.md  CHARTER.md  CLAUDE.md  CLAUDE_INIT.md  CLAUDE_RULES.md  CLAUDE_STARTUP.md  COMPONENTS.md  Caddyfile  DISTRIBUTED.md  ENGINE.md  ENVOY.md  IMPLEMENTATION_ANALYSIS_REPORT.md  (+64 more)
.ai-agents/: AI_HANDOFF_PROMPT.md  CLAUDE_NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT.md  context-for-next-session-newtype-fixes.md  invocation-templates.md  prompt-ordering.md
.astro/: settings.json
.continue/: README.md  config.json  config.yaml
.githooks/: README.md  commit-msg  pre-commit
.kilocode/: mcp.json
.roo/: mcp.json
agenda-old/: auth.md  beacons.md  brainstorming.md  charter.md  hosts.md  (+19 more)
infrastructure/dev-server/: Cargo.toml  README.md  test-sse.sh
libraries/arborist/src/parsers/denoAst/wasm/: Cargo.toml  build.sh  build.ts  index.ts  test_wasm.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/_buildSymbolTable/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/_convertDependency/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/_convertDiagnostic/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/_convertInferredType/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/_convertWasmSemanticInfo/_convertReference/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/initWasm/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/parseWithSemantics/: index.ts
libraries/arborist/src/parsers/denoAst/wasm/src/: lib.rs
(+23024 files in other folders)
