[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
h3 = "0.0.6"
h3-quinn = "0.0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
mime_guess = "2"
notify = "6"
bytes = "1"
http = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = "0.23"
rustls-pemfile = "2"
